--- a/src/main/resources/assets/perfectparitypg/lang/en_us.json
+++ b/src/main/resources/assets/perfectparitypg/lang/en_us.json
@@ -1,37 +1,37 @@
 {
-  "block.minecraft.chiseled_resin_bricks": "Chiseled Resin Bricks",
-  "block.minecraft.resin_block": "Block of Resin",
-  "block.minecraft.resin_brick_slab": "Resin Brick Slab",
-  "block.minecraft.resin_brick_stairs": "Resin Brick Stairs",
-  "block.minecraft.resin_brick_wall": "Resin Brick Wall",
-  "block.minecraft.resin_bricks": "Resin Bricks",
-  "block.minecraft.resin_clump": "Resin Clump",
-  "item.minecraft.resin_brick": "Resin Brick",
-  "item.minecraft.resin_clump": "Resin Clump",
-  "block.minecraft.pale_oak_button": "Pale Oak Button",
-  "block.minecraft.pale_oak_door": "Pale Oak Door",
-  "block.minecraft.pale_oak_fence": "Pale Oak Fence",
-  "block.minecraft.pale_oak_fence_gate": "Pale Oak Fence Gate",
-  "block.minecraft.pale_oak_hanging_sign": "Pale Oak Hanging Sign",
-  "block.minecraft.pale_oak_leaves": "Pale Oak Leaves",
-  "block.minecraft.pale_oak_log": "Pale Oak Log",
-  "block.minecraft.pale_oak_planks": "Pale Oak Planks",
-  "block.minecraft.pale_oak_pressure_plate": "Pale Oak Pressure Plate",
-  "block.minecraft.pale_oak_sapling": "Pale Oak Sapling",
-  "block.minecraft.pale_oak_sign": "Pale Oak Sign",
-  "block.minecraft.pale_oak_slab": "Pale Oak Slab",
-  "block.minecraft.pale_oak_stairs": "Pale Oak Stairs",
-  "block.minecraft.pale_oak_trapdoor": "Pale Oak Trapdoor",
-  "block.minecraft.pale_oak_wall_hanging_sign": "Pale Oak Wall Hanging Sign",
-  "block.minecraft.pale_oak_wall_sign": "Pale Oak Wall Sign",
-  "block.minecraft.pale_oak_wood": "Pale Oak Wood",
-  "block.minecraft.stripped_pale_oak_log": "Stripped Pale Oak Log",
-  "block.minecraft.stripped_pale_oak_wood": "Stripped Pale Oak Wood",
-  "item.minecraft.pale_oak_boat": "Pale Oak Boat",
-  "item.minecraft.pale_oak_chest_boat": "Pale Oak Boat with Chest",
-  "entity.minecraft.pale_oak_boat": "Pale Oak Boat",
-  "entity.minecraft.pale_oak_chest_boat": "Pale Oak Boat with Chest",
-  "trim_material.minecraft.resin": "Resin Material",
+  "block.perfectparitypg.chiseled_resin_bricks": "Chiseled Resin Bricks",
+  "block.perfectparitypg.resin_block": "Block of Resin",
+  "block.perfectparitypg.resin_brick_slab": "Resin Brick Slab",
+  "block.perfectparitypg.resin_brick_stairs": "Resin Brick Stairs",
+  "block.perfectparitypg.resin_brick_wall": "Resin Brick Wall",
+  "block.perfectparitypg.resin_bricks": "Resin Bricks",
+  "block.perfectparitypg.resin_clump": "Resin Clump",
+  "item.perfectparitypg.resin_brick": "Resin Brick",
+  "item.perfectparitypg.resin_clump": "Resin Clump",
+  "block.perfectparitypg.pale_oak_button": "Pale Oak Button",
+  "block.perfectparitypg.pale_oak_door": "Pale Oak Door",
+  "block.perfectparitypg.pale_oak_fence": "Pale Oak Fence",
+  "block.perfectparitypg.pale_oak_fence_gate": "Pale Oak Fence Gate",
+  "block.perfectparitypg.pale_oak_hanging_sign": "Pale Oak Hanging Sign",
+  "block.perfectparitypg.pale_oak_leaves": "Pale Oak Leaves",
+  "block.perfectparitypg.pale_oak_log": "Pale Oak Log",
+  "block.perfectparitypg.pale_oak_planks": "Pale Oak Planks",
+  "block.perfectparitypg.pale_oak_pressure_plate": "Pale Oak Pressure Plate",
+  "block.perfectparitypg.pale_oak_sapling": "Pale Oak Sapling",
+  "block.perfectparitypg.pale_oak_sign": "Pale Oak Sign",
+  "block.perfectparitypg.pale_oak_slab": "Pale Oak Slab",
+  "block.perfectparitypg.pale_oak_stairs": "Pale Oak Stairs",
+  "block.perfectparitypg.pale_oak_trapdoor": "Pale Oak Trapdoor",
+  "block.perfectparitypg.pale_oak_wall_hanging_sign": "Pale Oak Wall Hanging Sign",
+  "block.perfectparitypg.pale_oak_wall_sign": "Pale Oak Wall Sign",
+  "block.perfectparitypg.pale_oak_wood": "Pale Oak Wood",
+  "block.perfectparitypg.stripped_pale_oak_log": "Stripped Pale Oak Log",
+  "block.perfectparitypg.stripped_pale_oak_wood": "Stripped Pale Oak Wood",
+  "item.perfectparitypg.pale_oak_boat": "Pale Oak Boat",
+  "item.perfectparitypg.pale_oak_chest_boat": "Pale Oak Boat with Chest",
+  "entity.perfectparitypg.pale_oak_boat": "Pale Oak Boat",
+  "entity.perfectparitypg.pale_oak_chest_boat": "Pale Oak Boat with Chest",
+  "trim_material.perfectparitypg.resin": "Resin Material",
   "subtitles.block.creaking_heart.hurt": "Creaking Heart grumbles",
   "subtitles.block.creaking_heart.idle": "Eerie noise",
   "subtitles.block.creaking_heart.spawn": "Creaking Heart awakens",
@@ -46,18 +46,18 @@
   "subtitles.entity.creaking.twitch": "Creaking twitches",
   "subtitles.entity.creaking.unfreeze": "Creaking moves",
   "subtitles.entity.parrot.imitate.creaking": "Parrot creaks",
-  "block.minecraft.creaking_heart": "Creaking Heart",
-  "entity.minecraft.creaking": "Creaking",
-  "entity.minecraft.creaking_transient": "Creaking",
-  "item.minecraft.creaking_spawn_egg": "Creaking Spawn Egg",
-  "block.minecraft.closed_eyeblossom": "Closed Eyeblossom",
-  "block.minecraft.open_eyeblossom": "Open Eyeblossom",
-  "block.minecraft.potted_closed_eyeblossom": "Potted Closed Eyeblossom",
-  "block.minecraft.potted_open_eyeblossom": "Potted Open Eyeblossom",
+  "block.perfectparitypg.creaking_heart": "Creaking Heart",
+  "entity.perfectparitypg.creaking": "Creaking",
+  "entity.perfectparitypg.creaking_transient": "Creaking",
+  "item.perfectparitypg.creaking_spawn_egg": "Creaking Spawn Egg",
+  "block.perfectparitypg.closed_eyeblossom": "Closed Eyeblossom",
+  "block.perfectparitypg.open_eyeblossom": "Open Eyeblossom",
+  "block.perfectparitypg.potted_closed_eyeblossom": "Potted Closed Eyeblossom",
+  "block.perfectparitypg.potted_open_eyeblossom": "Potted Open Eyeblossom",
   "subtitles.block.eyeblossom.close": "Eyeblossom closes",
   "subtitles.block.eyeblossom.idle": "Eyeblossom whispers",
   "subtitles.block.eyeblossom.open": "Eyeblossom opens",
-  "block.minecraft.pale_moss_block": "Pale Moss Block",
-  "block.minecraft.pale_moss_carpet": "Pale Moss Carpet",
-  "biome.minecraft.pale_garden": "Pale Garden"
+  "block.perfectparitypg.pale_moss_block": "Pale Moss Block",
+  "block.perfectparitypg.pale_moss_carpet": "Pale Moss Carpet",
+  "biome.perfectparitypg.pale_garden": "Pale Garden"
 }
