--- a/src/main/resources/assets/perfectparitypg/lang/en_us.json
+++ b/src/main/resources/assets/perfectparitypg/lang/en_us.json
@@ -13,6 +13,8 @@
   "block.perfectparitypg.pale_oak_button": "Pale Oak Button",
   "block.perfectparitypg.pale_oak_door": "Pale Oak Door",
   "block.perfectparitypg.pale_oak_fence": "Pale Oak Fence",
+
+  "block.perfectparitypg.pale_hanging_moss": "Pale Hanging Moss",
   "block.perfectparitypg.pale_oak_fence_gate": "Pale Oak Fence Gate",
   "block.perfectparitypg.pale_oak_hanging_sign": "Pale Oak Hanging Sign",
   "block.perfectparitypg.pale_oak_leaves": "Pale Oak Leaves",
